@@ -1,8 +1,9 @@
 Revision history for Perl extension Module::Build.
 
  - Some large VMS fixes, mostly having to do with the non-case-
-   preserving nature of most VMS filesystems. [John E. Malmberg and
-   Craig A. Berry]
+   preserving nature of most VMS filesystems, but also correcting for
+   illegal characters in VMS file specs. [John E. Malmberg and Craig
+   A. Berry]
 
  - We now use a much more reliable method when Data::Dumper-ing saved
    state data to the _build/ directory. [Yves]
